# datascale

./: .gitignore  README.md  pyproject.toml
cookbook/tutorials/agent_docs/: README.md  config.py  main.py  requirements.txt
cookbook/tutorials/agent_docs/output/: README.md  chapter_1.md  chapter_100.md  chapter_2.md  chapter_200.md  chapter_3.md  chapter_300.md  chapter_310.md  chapter_320.md  chapter_340.md  chapter_350.md  chapter_4.md  chapter_410.md  chapter_411.md  chapter_412.md  chapter_420.md  chapter_423.md  chapter_424.md  chapter_442.md  chapter_443.md  chapter_444.md  chapter_445.md  chapter_450.md  chapter_451.md  chapter_452.md  chapter_453.md  chapter_462.md  chapter_5.md  chapter_500.md  chapter_6.md  chapter_8.md  (+3 more)
cookbook/tutorials/mcp_rag/: .env.example  README.md  pyproject.toml  requirements.txt
cookbook/tutorials/mcp_rag/app/: config.py  main.py
cookbook/tutorials/mcp_rag/app/api/: routes.py
cookbook/tutorials/mcp_rag/app/lib/: gemini_client.py  supabase_client.py
cookbook/tutorials/mcp_rag/app/models/: embedding.py  search.py
cookbook/tutorials/mcp_rag/app/services/: index.py  search.py
cookbook/tutorials/mcp_rag/indexer/: README.md  indexer.py
cookbook/tutorials/mcp_rag/mcp/: README.md  mcp_cofig.json  mcp_local_vec.py  mcp_remote_vec.py  mcp_simple.py
cookbook/tutorials/mcp_rag/notebook/: gemini_supabase_indexer.ipynb
cookbook/tutorials/mcp_rag/supabase/: files.sql  match_file_embeddings.sql
cookbook/tutorials/tsne_viz/: .env.example  README.md  indexer.py  main.ipynb  requirements.txt  viz_cluster.py  viz_scatter.py
(+23 files in other folders)
